syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "google/protobuf/wrappers.proto";
import "Identity.proto";
import "Messages/CustomerOnSABase.proto";

message CreateCustomerRequest {
    int32 SalesArrangementId = 1;
    
    int32 CustomerRoleId = 2;

    CustomerOnSABase Customer = 3;
}

message CreateCustomerResponse {
    int32 CustomerOnSAId = 1;

    google.protobuf.Int32Value PartnerId = 2;

    repeated cis.types.Identity CustomerIdentifiers = 3;
}